# ComputerGraphics

CGFinalProject/: CMakeLists.txt  README.md
CGFinalProject/main/: Floor.cpp  Floor.h  box.frag  box.vert  floor.frag  floor.vert  lab4_character.cpp  lightInfo.h  main.cpp  skybox.frag  skybox.vert
CGFinalProject/main/render/: shader.cpp  shader.h
FinalProject/lab2/lab2/: CMakeLists.txt
FinalProject/lab2/lab2/lab2/: box.frag  lab2_building.cpp
